tests/invalid/Final_Invalid_13.whiley
function f(int x) -> (int r):
    //
    final int y
    //
    switch(x):
        case 0:
            y = x
    //    
    y = 0
    //
    return y